--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
 								<h4 class="header_title"> I Do <span id="typed"></span></h4>
 								<p class="short-info">
-									Business/Data analyst with experience of Corporate Affairs and Digital Marketing. Graduate of University of Texas, Austin, Data Analytics and Visualisation boot camp with an educational background of Economics and Finance.
+									Data analyst with experience of Marketing and Sales departments. Persuing Master of Analytics from Texas A&M, University, Graduate of UT Austin, Data Analytics and Visualisation boot camp with an educational background of Economics and Finance.
 									Entrepreneurial mindset with an aptitude for problem solving and identifying new opportunities for growth based on data analysis.
-									Champion of excel with newly acquired skills in VBA, Python, SQL, JavaScript, R, HTML, CSS, Machine Learning, BigData & Tableau.	
+									Experience in important analytics tool and languages like Excel, VBA, Python, SQL, R, JavaScript, Google Analytics, HTML, CSS, Machine Learning, BigData, Tableau & PowerBI.	
 								</p>
 								<a id="g-p-f-h" class="pagelink mybtn mybtn-bg" href="#portfolio"><span><i
 											class="fas fa-briefcase"></i>Portfolio</span></a>
@@ -134,17 +134,14 @@
 												<span class="title">Last Name : </span>
 												<span class="value">Farooq</span>
 											</li>
-											<li>
-												<span class="title">Age : </span>
-												<span class="value">28</span>
-											</li>
+											
 											<li>
 												<span class="title">Birthdate : </span>
 												<span class="value">13 December 1992</span>
 											</li>
 											<li>
-												<span class="title">Residence : </span>
-												<span class="value">USA</span>
+												<span class="title">Address : </span>
+												<span class="value">Houston, Texas</span>
 											</li>
 											<li>
 												<span class="title">Langages : </span>
@@ -167,10 +164,7 @@
 											<li>
 												<span class="title">LinkedIn : </span><span class="value"><a href="https://www.linkedin.com/in/umarfoo/" target="_blank">Umarfoo</a></span>
 											</li>
-											<li>
-												<span class="title">Address :</span>
-												<span class="value">Austin, Texas</span>
-											</li>
+											
 										</ul>
 									</div>
 								</div>
@@ -185,7 +179,7 @@
 																<i class="fa fa-code"></i>
 															</div>
 															<div class="number">
-																<span class="n-counter">20K</span><span class="plus">+</span>
+																<span class="n-counter">50K</span><span class="plus">+</span>
 															</div>
 														</div>
 														<div class="content">
@@ -203,7 +197,7 @@
 																<i class="fas fa-briefcase"></i>
 															</div>
 															<div class="number">
-																<span class="n-counter">24</span><span class="plus">+</span>
+																<span class="n-counter">40</span><span class="plus">+</span>
 															</div>
 														</div>
 														<div class="content">
@@ -221,7 +215,7 @@
 																<i class="fas fa-laptop-code"></i>
 															</div>
 															<div class="number">
-																<span class="n-counter">50</span><span class="plus">+</span>
+																<span class="n-counter">100</span><span class="plus">+</span>
 															</div>
 														</div>
 														<div class="content">
@@ -239,7 +233,7 @@
 																<i class="fas fa-database"></i>
 															</div>
 															<div class="number">
-																<span class="n-counter">72M</span><span class="plus">+</span>
+																<span class="n-counter">200M</span><span class="plus">+</span>
 															</div>
 														</div>
 														<div class="content">
@@ -647,7 +641,7 @@
 									</div>
 									<div class="single-skill">
 										<div class="label">
-											<span>Tableau</span>
+											<span>Tableau & PowerBI</span>
 											<!-- <span>80%</span> -->
 										</div>
 										<div class="progress">
@@ -757,6 +751,19 @@
 										<div class="education-list">
 											<div class="single-education">
 												<h4 class="collage-name">
+													A&M University
+												</h4>
+												<p class="degree">Master of Analytics<span class="year">2023 - 2025</span>
+												</p>
+												<div class="description">
+													<p>
+														The MS Analytics program is a 5-semester part-time program that focuses on applying statistical modeling methods to big data and solve business problems.   
+														Graduates are equipped with high demand skill-sets. These include: Business Acumen, Data Processing, Data Science/Storytelling, Machine Learning, Predictive Analytics & Statistics.
+													</p>
+												</div>
+											</div>
+											<div class="single-education">
+												<h4 class="collage-name">
 													University of Texas, Austin
 												</h4>
 												<p class="degree">BOOTCAMP IN DATA ANALYTICS & VISUALISATION<span class="year">APRIL 2020 - OCT 2020</span>
@@ -765,23 +772,6 @@
 													<p>
 														A 24-week intensive program focused on gaining technical programming skills in Excel,
 														VBA, Python, R, JavaScript, SQL Databases, Tableau, Big Data, and Machine Learning.
-													</p>
-												</div>
-											</div>
-											<div class="single-education">
-												<h4 class="collage-name">
-													Boston University
-												</h4>
-												<p class="degree">MICROMASTER IN DIGITAL PRODUCT MANAGEMENT<span class="year">2020 - 2021</span>
-												</p>
-												<div class="description">
-													<p>
-														A five course certification focused on gaining Digital Product Management skills. Courses include: <br> 
-														1. Strategic Social Media Marketing <br>
-														2. Platform Strategy for Business <br>
-														3. Product Management with Lean, Agile & System Design Thinking <br>
-														4. Driving Digital Innovation Through Experimentation <br>
-														5. Business Analytics for Data-driven Decision Making
 													</p>
 												</div>
 											</div>
@@ -813,7 +803,7 @@
 												<h4 class="collage-name">
 													Tiger Pistol
 												</h4>
-												<p class="degree">Data Analyst SaaS<span class="year">2021 - Present</span>
+												<p class="degree">Data Analyst SaaS<span class="year">2021 - 2023</span>
 												</p>
 												<div class="description">
 													<p>
@@ -910,7 +900,7 @@
 								<li class="filter" data-filter=".javascript">JavaScript</li>
 								<li class="filter" data-filter=".html">HTML & CSS</li>
 								<li class="filter" data-filter=".sql">SQL & NoSQL</li>
-								<li class="filter" data-filter=".tableau">Tableau</li>
+								<li class="filter" data-filter=".tableau">Tableau & PowerBI</li>
 								<li class="filter" data-filter=".wordpress">Wordpress</li>
 							</ul>
 						</div>
